syntax = "proto3";

option java_package = "com.grpc.demo.proto_gen";

message HelloRequest {
  string name = 1;
}
