syntax = "proto3";

// java service options
option java_multiple_files = true;
option java_package = "com.grpc.demo.proto_gen";

import "messages/hello_reply.proto";
import "messages/hello_request.proto";

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}